--- a/app/static/style.css
+++ b/app/static/style.css
@@ -24,3 +24,7 @@ nav a {
   margin-bottom: 1em;
   padding-bottom: 1em;
 }
+.message {
+  color: #000; /* текст — черный */
+  background-color: #e2f0cb; /* светло-зелёный */
+}
