--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,11 +1,18 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block title %}Вход{% endblock %}
+
 {% block content %}
-  <h2>Войти</h2>
-  <form method="POST">
-    {{ form.hidden_tag() }}
-    {{ form.username.label }} {{ form.username(size=32) }}<br>
-    {{ form.password.label }} {{ form.password(size=32) }}<br>
-    {{ form.submit() }}
-  </form>
+<h2>Вход</h2>
+<form method="post">
+  {{ form.hidden_tag() }}
+  <div class="form-group">
+    {{ form.username.label }} {{ form.username(class="form-control") }}
+  </div>
+  <div class="form-group">
+    {{ form.password.label }} {{ form.password(class="form-control") }}
+  </div>
+  <div class="form-group">
+    {{ form.submit(class="btn btn-primary") }}
+  </div>
+</form>
 {% endblock %}
