--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,11 +1,24 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block title %}Регистрация{% endblock %}
+
 {% block content %}
-  <h2>Регистрация</h2>
-  <form method="POST">
-    {{ form.hidden_tag() }}
-    {{ form.username.label }} {{ form.username(size=32) }}<br>
-    {{ form.password.label }} {{ form.password(size=32) }}<br>
-    {{ form.submit() }}
-  </form>
+<h2>Регистрация</h2>
+<form method="post">
+  {{ form.hidden_tag() }}
+  <div class="form-group">
+    {{ form.username.label }} {{ form.username(class="form-control") }}
+  </div>
+  <div class="form-group">
+    {{ form.email.label }} {{ form.email(class="form-control") }}
+  </div>
+  <div class="form-group">
+    {{ form.password.label }} {{ form.password(class="form-control") }}
+  </div>
+  <div class="form-group">
+    {{ form.confirm.label }} {{ form.confirm(class="form-control") }}
+  </div>
+  <div class="form-group">
+    {{ form.submit(class="btn btn-success") }}
+  </div>
+</form>
 {% endblock %}
